[gd_scene load_steps=3 format=3 uid="uid://bsd4ah1ln2e2r"]

[ext_resource type="Script" path="res://scripts/pvp_roundover.gd" id="1_veo5v"]
[ext_resource type="Script" path="res://scripts/round_end_score.gd" id="2_25k4o"]

[node name="RoundWin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_veo5v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 328.0
offset_right = 858.0
offset_bottom = 456.0
scale = Vector2(2.095, 2.095)

[node name="roundcomplete" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "                         	 Player 1 Wins!"
fit_content = true

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
script = ExtResource("2_25k4o")

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
